# lab_u4

./: .dockerignore  .gitignore  04_3_Taller_FastAPI.ipynb  Dockerfile  README.Docker.es.md  README.md  app.py  compose.yaml  logger_setup.py  main.py  observability_setup.py  pyproject.toml
conf.d/: custom_logs.yaml
