[project]
name = "lab-u4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "ipykernel>=7.0.1",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
